# MegatronDBMS

./: .gitignore  CMakeLists.txt  disk.cpp  disk.h  diskcontroller.cpp  diskcontroller.h  diskinit.h  diskinit.ui  main.cpp  megatron.cpp  megatron.h  megatron.ui  megatron_types.h  opentable.h  opentable.ui  queryform.cpp  queryform.ui  resources.qrc  systemcatalog.cpp  systemcatalog.h
resources/: resources.qrc
resources/tests/: movie-ratings.schema.csv  titanic-schema.csv
src/app/: CMakeLists.txt  main.cpp  megatron.cpp  megatron.h  megatron.ui
src/core/: CMakeLists.txt  database.cpp  database.h  diskmanager.cpp  diskmanager.h  file.cpp  file.h  heapfile.cpp  heapfile.h  megatron_structs.h  megatron_types.h  page.cpp  page.h  pagefactory.h  record.cpp  record.h  storagemanager.cpp  storagemanager.h  systemcatalog.cpp  systemcatalog.h
src/interface/: CMakeLists.txt  attributetablewidget.cpp  attributetablewidget.h  checkboxdelegate.h  comboboxdelegate.h  customcomboboxdelegate.h  customindexcombobox.h  diskinit.cpp  diskinit.ui  indexform.cpp  indexform.h  indexform.ui  lineeditdelegate.h  newrelation.cpp  newrelation.h  newrelation.ui  opentable.cpp  opentable.ui  queryform.cpp  queryform.h  queryform.ui  texteditdelegate.h
src/memory/: CMakeLists.txt  buffermanager.cpp  buffermanager.h
src/storage/: CMakeLists.txt  armassembly.cpp  armassembly.h  block.cpp  block.h  disk.cpp  disk.h  diskcontroller.cpp  diskcontroller.h  platter.cpp  platter.h  rwhead.cpp  rwhead.h  sector.cpp  sector.h  surface.cpp  surface.h  track.cpp  track.h  utility.h
